# iac-code

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  Makefile  README.md  babel.cfg  pyproject.toml  setup.py
iac-code-rs/: Cargo.toml  Makefile  justfile  rust-toolchain.toml
iac-code-rs/crates/iac-code-a2a/: Cargo.toml  build.rs
iac-code-rs/crates/iac-code-a2a/proto/: a2a.proto  a2a_jsonrpc.proto
iac-code-rs/crates/iac-code-a2a/src/: agent_card.rs  app.rs  artifacts.rs  client.rs  dispatcher.rs  events.rs  exposure.rs  lib.rs  metrics.rs  parts.rs  persistence.rs  private_fs.rs  push.rs  push_config.rs  push_config_store.rs  push_endpoint.rs  push_queue.rs  push_queue_job.rs  push_queue_local.rs  push_queue_redis.rs  push_secrets.rs  push_sender.rs  push_worker.rs  router.rs  server.rs  signing.rs  task_store.rs  transport.rs  types.rs
iac-code-rs/crates/iac-code-a2a/tests/: agent_card_compat.rs  app_compat.rs  artifacts_compat.rs  client_compat.rs  dispatcher_compat.rs  events_compat.rs  exposure_compat.rs  grpc_jsonrpc_transport_compat.rs  http_transport_compat.rs  metrics_compat.rs  parts_compat.rs  persistence_compat.rs  push_compat.rs  push_config_store_compat.rs  push_queue_compat.rs  push_secrets_compat.rs  push_worker_compat.rs  redis_streams_transport_compat.rs  router_compat.rs  server_compat.rs  signing_compat.rs  stdio_transport_compat.rs  task_store_compat.rs  transport_compat.rs  unix_transport_compat.rs  websocket_transport_compat.rs
iac-code-rs/crates/iac-code-acp/: Cargo.toml
iac-code-rs/crates/iac-code-acp/src/: convert.rs  lib.rs  permissions.rs  session.rs  slash_registry.rs  state.rs
iac-code-rs/crates/iac-code-acp/tests/: acp_compat.rs  session_compat.rs
iac-code-rs/crates/iac-code-cli/: Cargo.toml
iac-code-rs/crates/iac-code-cli/src/: a2a_artifacts.rs  a2a_client_args.rs  a2a_client_commands.rs  a2a_client_format.rs  a2a_client_route_args.rs  a2a_client_routes.rs  a2a_client_rpc.rs  a2a_client_task_args.rs  a2a_config.rs  a2a_config_yaml.rs  a2a_grpc_convert.rs  a2a_grpc_json.rs  a2a_grpc_proto.rs  a2a_messages.rs  a2a_payload.rs  a2a_push.rs  a2a_redis.rs  a2a_redis_parse.rs  a2a_response.rs  a2a_server.rs  a2a_server_args.rs  a2a_server_dispatch.rs  a2a_server_grpc.rs  a2a_server_grpc_jsonrpc.rs  a2a_server_grpc_official.rs  a2a_server_http.rs  a2a_server_redis_streams.rs  a2a_server_runtime.rs  a2a_server_stdio.rs  a2a_server_unix.rs  a2a_server_websocket.rs  a2a_tasks.rs  acp_agent.rs  acp_http.rs  acp_payload.rs  acp_resume.rs  acp_server.rs  acp_server_args.rs  acp_sessions.rs  acp_stdio.rs  (+84 more)
iac-code-rs/crates/iac-code-cli/tests/: headless_fake_cli.rs  version_compat.rs
iac-code-rs/crates/iac-code-config/: Cargo.toml
iac-code-rs/crates/iac-code-config/src/: cloud_credentials.rs  credentials.rs  file_security.rs  i18n.rs  lib.rs  paths.rs  settings.rs  simple_yaml.rs
iac-code-rs/crates/iac-code-config/tests/: cloud_credentials_compat.rs  config_compat.rs  i18n_compat.rs
iac-code-rs/crates/iac-code-core/: Cargo.toml
iac-code-rs/crates/iac-code-core/src/: agent_loop.rs  context.rs  lib.rs  result_storage.rs  session.rs  session_usage.rs  system_prompt.rs
iac-code-rs/crates/iac-code-core/tests/: agent_loop.rs  context_compat.rs  session_compat.rs  session_usage_compat.rs  tool_turn.rs
iac-code-rs/crates/iac-code-crypto/: Cargo.toml
iac-code-rs/crates/iac-code-crypto/src/: lib.rs
iac-code-rs/crates/iac-code-crypto/tests/: fernet_compat.rs
iac-code-rs/crates/iac-code-exec/: Cargo.toml
iac-code-rs/crates/iac-code-exec/src/: lib.rs  output.rs  runner.rs
iac-code-rs/crates/iac-code-exec/tests/: headless_fake.rs
iac-code-rs/crates/iac-code-protocol/: Cargo.toml
iac-code-rs/crates/iac-code-protocol/src/: json.rs  lib.rs  message.rs  permission.rs  provider.rs  stream_event.rs  tool.rs
iac-code-rs/crates/iac-code-protocol/tests/: protocol_core.rs  stream_events.rs
iac-code-rs/crates/iac-code-providers/: Cargo.toml
iac-code-rs/crates/iac-code-providers/src/: anthropic.rs  configured.rs  fake.rs  lib.rs  manager.rs  multimodal.rs  openai_compatible.rs  qwenpaw.rs  registry.rs  tool_input_parser.rs
iac-code-rs/crates/iac-code-providers/tests/: anthropic.rs  multimodal.rs  openai_compatible.rs  qwenpaw_compat.rs
iac-code-rs/crates/iac-code-telemetry/: Cargo.toml
iac-code-rs/crates/iac-code-telemetry/src/: config.rs  constants.rs  content.rs  fallback.rs  identity.rs  lib.rs  names.rs  sanitize.rs
iac-code-rs/crates/iac-code-telemetry/tests/: telemetry_compat.rs
iac-code-rs/crates/iac-code-tools/: Cargo.toml
iac-code-rs/crates/iac-code-tools/src/: agent_tool.rs  aliyun_api.rs  aliyun_doc_search.rs  bash.rs  executor.rs  file_tools.rs  lib.rs  memory_tools.rs  path_safety.rs  permissions.rs  registry.rs  ros_stack.rs  ros_stack_instances.rs  skill_tools.rs  task_tools.rs  web_fetch.rs
iac-code-rs/crates/iac-code-tools/tests/: agent_tool_compat.rs  aliyun_api_compat.rs  aliyun_doc_search_compat.rs  bash_compat.rs  file_tools_compat.rs  memory_tools_compat.rs  permission_compat.rs  ros_stack_compat.rs  (+5 more)
iac-code-rs/crates/iac-code-tui/: Cargo.toml
iac-code-rs/scripts/: build-release.sh
(+1478 files in other folders)
