[package]
name = "iac-code-cli"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "iac-code"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
iac-code-a2a = { path = "../iac-code-a2a" }
iac-code-acp = { path = "../iac-code-acp" }
iac-code-config = { path = "../iac-code-config" }
iac-code-core = { path = "../iac-code-core" }
iac-code-exec = { path = "../iac-code-exec" }
iac-code-protocol = { path = "../iac-code-protocol" }
iac-code-providers = { path = "../iac-code-providers" }
iac-code-tui = { path = "../iac-code-tui" }
iac-code-tools = { path = "../iac-code-tools" }
libc = "0.2"
prost-types = "0.13.5"
redis = "0.27.6"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
ring = "0.17.14"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync"] }
tokio-stream = "0.1.18"
tonic = { version = "0.12.3", features = ["transport"] }
unicode-segmentation = "1.12"
