[package]
name = "iac-code-config"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde_json = "1.0.149"

[dev-dependencies]
iac-code-providers = { path = "../iac-code-providers" }
iac-code-protocol = { path = "../iac-code-protocol" }
