[package]
name = "iac-code-exec"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iac-code-core = { path = "../iac-code-core" }
iac-code-protocol = { path = "../iac-code-protocol" }
iac-code-providers = { path = "../iac-code-providers" }
iac-code-tools = { path = "../iac-code-tools" }
