[package]
name = "iac-code-providers"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22.1"
iac-code-crypto = { path = "../iac-code-crypto" }
iac-code-protocol = { path = "../iac-code-protocol" }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
