[package]
name = "iac-code-tools"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22.1"
iac-code-config = { path = "../iac-code-config" }
iac-code-protocol = { path = "../iac-code-protocol" }
percent-encoding = "2.3.2"
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
ring = "0.17.14"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
