[package]
name = "iac-code-tui"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iac-code-protocol = { path = "../iac-code-protocol" }
libc = "0.2"
pulldown-cmark = "0.10"
unicode-segmentation = "1.12"
unicode-width = "0.2"
